--- a/cf/i18n/resources/it-it.untranslated.json
+++ b/cf/i18n/resources/it-it.untranslated.json
@@ -508,8 +508,8 @@
     "translation": "CF_NAME services"
   },
   {
-    "id": "CF_NAME set-health-check APP_NAME ('port' | 'none')",
-    "translation": "CF_NAME set-health-check APP_NAME ('port' | 'none')"
+    "id": "CF_NAME set-health-check APP_NAME (process | port | http)\\n\\nTIP: 'none' has been deprecated but is accepted for 'process'.",
+    "translation": "CF_NAME set-health-check APP_NAME (process | port | http)\\n\\nTIP: 'none' has been deprecated but is accepted for 'process'."
   },
   {
     "id": "CF_NAME set-org-role USERNAME ORG ROLE\\n\\nROLES:\\n   'OrgManager' - Invite and manage users, select and change plans, and set spending limits\\n   'BillingManager' - Create and manage the billing account and payment info\\n   'OrgAuditor' - Read-only access to org info and reports",
@@ -716,10 +716,6 @@
     "translation": "Cloud Foundry command line tool"
   },
   {
-    "id": "Comma delimited list of ports the application may listen on\" hidden:\"true",
-    "translation": "Comma delimited list of ports the application may listen on\" hidden:\"true"
-  },
-  {
     "id": "Commands offered by installed plugins:",
     "translation": "Commands offered by installed plugins:"
   },
@@ -812,8 +808,8 @@
     "translation": "Global options:"
   },
   {
-    "id": "HEALTH_CHECK_TYPE must be \"port\" or \"none\"",
-    "translation": ""
+    "id": "HEALTH_CHECK_TYPE must be \"port\", \"process\", or \"http\"",
+    "translation": "HEALTH_CHECK_TYPE must be \"port\", \"process\", or \"http\""
   },
   {
     "id": "HOST",
