--- a/cf/i18n/resources/en-us.all.json
+++ b/cf/i18n/resources/en-us.all.json
@@ -1276,8 +1276,8 @@
     "translation": "CF_NAME set-health-check APP_NAME 'port'|'none'"
   },
   {
-    "id": "CF_NAME set-health-check APP_NAME ('port' | 'none')",
-    "translation": "CF_NAME set-health-check APP_NAME ('port' | 'none')"
+    "id": "CF_NAME set-health-check APP_NAME (process | port | http)\\n\\nTIP: 'none' has been deprecated but is accepted for 'process'.",
+    "translation": "CF_NAME set-health-check APP_NAME (process | port | http)\\n\\nTIP: 'none' has been deprecated but is accepted for 'process'."
   },
   {
     "id": "CF_NAME set-org-role USERNAME ORG ROLE\n\n",
@@ -1672,6 +1672,10 @@
     "translation": "Change service plan for a service instance"
   },
   {
+    "id": "Change type of health check performed on an app",
+    "translation": "Change type of health check performed on an app"
+  },
+  {
     "id": "Change user password",
     "translation": "Change user password"
   },
@@ -1698,10 +1702,6 @@
   {
     "id": "Comma delimited list of ports the application may listen on",
     "translation": "Comma delimited list of ports the application may listen on"
-  },
-  {
-    "id": "Comma delimited list of ports the application may listen on\" hidden:\"true",
-    "translation": "Comma delimited list of ports the application may listen on\" hidden:\"true"
   },
   {
     "id": "Command Help",
@@ -3064,8 +3064,8 @@
     "translation": "HEALTH_CHECK_TYPE"
   },
   {
-    "id": "HEALTH_CHECK_TYPE must be \"port\" or \"none\"",
-    "translation": ""
+    "id": "HEALTH_CHECK_TYPE must be \"port\", \"process\", or \"http\"",
+    "translation": "HEALTH_CHECK_TYPE must be \"port\", \"process\", or \"http\""
   },
   {
     "id": "HOST",
@@ -4116,6 +4116,10 @@
     "translation": "Path not allowed in TCP route {{.RouteName}}"
   },
   {
+    "id": "Path on the app",
+    "translation": "Path on the app"
+  },
+  {
     "id": "Path to app directory or to a zip file of the contents of the app directory",
     "translation": "Path to app directory or to a zip file of the contents of the app directory"
   },
@@ -5082,6 +5086,10 @@
   {
     "id": "TIP:\n   Use 'CF_NAME create-user-provided-service' to make user-provided services available to CF apps",
     "translation": "TIP:\n   Use 'CF_NAME create-user-provided-service' to make user-provided services available to CF apps"
+  },
+  {
+    "id": "TIP: An app restart is required for the change to take affect.",
+    "translation": "TIP: An app restart is required for the change to take affect."
   },
   {
     "id": "TIP: Assign roles with '{{.BinaryName}} set-org-role' and '{{.BinaryName}} set-space-role'.",
