added details and application instance information
- also made the app summary display sharable

[finishes #126256629]

Signed-off-by: Anand Gaitonde <agaitonde@pivotal.io>
Signed-off-by: Alex Melnik <aleksandr.s.melnik@hpe.com>

--- a/cf/i18n/resources/de-de.untranslated.json
+++ b/cf/i18n/resources/de-de.untranslated.json
@@ -1152,6 +1152,10 @@
     "translation": ""
   },
   {
+    "id": "Details",
+    "translation": ""
+  },
+  {
     "id": "Disk",
     "translation": ""
   },
@@ -1426,6 +1430,10 @@
   {
     "id": "Repository: ",
     "translation": "Repository: "
+  },
+  {
+    "id": "Requested state:",
+    "translation": ""
   },
   {
     "id": "Resource matching API timed out; pushing all app files.",
