--- a/cf/i18n/resources/it-it.untranslated.json
+++ b/cf/i18n/resources/it-it.untranslated.json
@@ -748,6 +748,10 @@
     "translation": ""
   },
   {
+    "id": "Details",
+    "translation": ""
+  },
+  {
     "id": "Disk",
     "translation": ""
   },
@@ -1002,6 +1006,10 @@
   {
     "id": "Repository: ",
     "translation": "Repository: "
+  },
+  {
+    "id": "Requested state:",
+    "translation": ""
   },
   {
     "id": "Resource matching API timed out; pushing all app files.",
