--- a/cf/i18n/resources/fr-fr.untranslated.json
+++ b/cf/i18n/resources/fr-fr.untranslated.json
@@ -736,6 +736,10 @@
     "translation": ""
   },
   {
+    "id": "Details",
+    "translation": ""
+  },
+  {
     "id": "Disk",
     "translation": ""
   },
@@ -986,6 +990,10 @@
   {
     "id": "Recreate the app's executable artifact using the latest pushed app files and the latest environment (variables, service bindings, buildpack, stack, etc.)",
     "translation": "Recreate the app's executable artifact using the latest pushed app files and the latest environment (variables, service bindings, buildpack, stack, etc.)"
+  },
+  {
+    "id": "Requested state:",
+    "translation": ""
   },
   {
     "id": "Resource matching API timed out; pushing all app files.",
