--- a/cf/i18n/resources/ja-jp.untranslated.json
+++ b/cf/i18n/resources/ja-jp.untranslated.json
@@ -1152,6 +1152,10 @@
     "translation": ""
   },
   {
+    "id": "Details",
+    "translation": ""
+  },
+  {
     "id": "Disk",
     "translation": ""
   },
@@ -1414,6 +1418,10 @@
   {
     "id": "Recreate the app's executable artifact using the latest pushed app files and the latest environment (variables, service bindings, buildpack, stack, etc.)",
     "translation": "Recreate the app's executable artifact using the latest pushed app files and the latest environment (variables, service bindings, buildpack, stack, etc.)"
+  },
+  {
+    "id": "Requested state:",
+    "translation": ""
   },
   {
     "id": "Resource matching API timed out; pushing all app files.",
