--- a/cf/i18n/resources/zh-hans.all.json
+++ b/cf/i18n/resources/zh-hans.all.json
@@ -2188,6 +2188,10 @@
     "translation": "描述: {{.ServiceDescription}}"
   },
   {
+    "id": "Details",
+    "translation": ""
+  },
+  {
     "id": "Did you mean?",
     "translation": "您打算？"
   },
@@ -4494,6 +4498,10 @@
   {
     "id": "Request pseudo-tty allocation",
     "translation": "请求伪 tty 分配"
+  },
+  {
+    "id": "Requested state:",
+    "translation": ""
   },
   {
     "id": "Requires SOURCE-APP TARGET-APP as arguments",
